--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -78,11 +78,11 @@
 
 .list {
     margin-right: 20px;
-    font-size: 20px;
+    /*font-size: 20px;
     text-transform: uppercase;
     color: #ffffff;
     cursor: pointer;
-    letter-spacing: 2px;
+    letter-spacing: 2px;*/
 }
 
 .list a {
@@ -106,4 +106,50 @@
     padding: 5px;
     color: #030;
     font-size: 18px;
+}
+
+.list a.active {
+    color: #ce60c3;
+}
+
+@media screen and(max-width: 489px) {
+   
+    .n-row:first-child {
+        font-size: 10px;
+    }
+    
+    .socials img {
+        width: 15px;
+        margin: 0 5px;
+    }
+
+    .logo {
+        width: 130px;
+    }
+
+    .icons a {
+        font-size: 12px;
+    }
+    
+    .icons span {
+        margin: 0 10px;
+    }
+    
+    .icons span .totalitems {
+        top: -15px;
+        right: -34px;
+        width: 20px;
+        height: 20px;
+        border-radius: 4px;
+        font-size: 10px;
+    }
+
+    .list a {
+        font-size: 16px;
+    }
+
+    .list:last-child {
+        margin-right: unset;
+    }
+    
 }
